update dependencies and fix all the broken code